@@ -8,6 +8,7 @@ Cacti CHANGELOG
 -bug#0001115: View Poller Cache does not show Data Sources that have no host
 -bug#0001107: ss_fping.php 100% "Pkt Loss" work not properly
 -bug: Cacti does not guarentee RRA consolidation functions exist in RRA's.
+-feature#0001122: Propagate Host Template changes to related hosts
 -feature: Add additional logging to Graph Xport
 -feature: Add rows dropdown to deivces, graphs and data sources
 -feature: Add device_id and event count to devices
